# api-doc-scraper

./: .gitignore  CLAUDE.md.example  HOMELAB-CLAUDE.md.template  PLAN.md  PROGRESS.md  README.md  pyproject.toml
.claude/commands/: relay.md
docs/specs/api-doc-scraper-ddrs/: 00-DDR-INDEX.md  DDR-01-generalized-stateful-readmeio-doc-scraper.md  DDR-02-multi-platform-adapter-architecture.md
docs/specs/intakes/: multi-platform-adapters.md
docs/specs/multi-platform-adapters/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  03-UI-SPEC.md  04-ROADMAP.md  05-REVIEW.md  ARCHITECTURE.md  PROGRESS.md  REQUIREMENTS.md  REVIEW.md  ROADMAP.md  S2-spike-result.md
scraper/: cli.py  config.py  core.py  emit.py  htmlmd.py  runner.py  slugify.py
scraper/adapters/: __init__.py  base.py  docusaurus.py  github_org.py  readme_io.py
seed/: capture_fixtures.py  scrape_askedgar_reference.py
targets/: askedgar.yaml  thatopen-docs.yaml  thatopen-github.yaml  thatopen-tutorials.yaml
tests/: test_config_safety.py  test_docusaurus_ac1.py  test_emit.py  test_g1_regression.py  test_github_org_ac2.py  test_htmlmd.py  test_output_quality.py  test_slugify.py
tests/fixtures/askedgar/: README.md  headings.json  seed_page.html  slugs.json
