[project]
name = "api-doc-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

[tool.pytest.ini_options]
addopts = "-m 'not network'"
markers = [
    "network: marks tests that require live network access (deselect with -m 'not network')",
]
